sass/base.scss
@media only screen and (max-width: 600px) {
  img.leftdoot {
    display: none;
  }
}

img.doot {
  width: 120px;
  height: 120px;
}

div.skiplink {
  margin-bottom: 1em;
}

nav ul {
  padding: 0;

  li {
    list-style: none;
    margin-bottom: 2em;
  }
}

div.content {
  width: 100%;
  max-width: 64em;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 4em;
}

div.title {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

div.title img {
  opacity: 1;
}

div.title h1 {
  display: inline;
}

body {
  margin: 0 8px;
  font-family: sans-serif;
}

main {
  line-height: 1.4;
}

h1 {
  font-size: 2em;
  font-weight: 400;
}

h2 {
  font-size: 1.6em;
  font-weight: 400;
}

h3 {
  font-size: 1.2em;
  font-weight: 600;
}

p.date {
  font-style: italic;
}

header {
  background-color: rgba(245, 245, 245, 0.6);
  margin: 0 -8px;
  padding: 16px 16px 16px 8px;
}

div.subtitle {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-weight: 200;
  font-size: 1.1rem;

  .description {
    font-weight: 100;
  }

  .date {
    font-style: italic;
  }
}

a {
  font-weight: 400;
  text-decoration: none;
  color: #222222;
  background-color: rgba(255, 255, 255, 0.2);
  border-bottom: dotted 1px #222222;
  border-radius: 2px;
}

code {
  background-color: rgba(245, 245, 245, 0.4);
  padding: 2px;
}

pre {
  code {
    background: none;
    padding: 0;
  }

  padding: 8px;
  overflow-x: scroll;
  background-color: rgba(245, 245, 245, 0.8) !important;
}

pre table td {
  padding: 0;
}

// The line number cells
pre table td:nth-of-type(1) {
  text-align: right;
  user-select: none;
  padding-right: 16px;

  mark {
    background: none !important;
  }
}

pre table td:nth-of-type(2) {
  width: 100%;
}

pre mark {
  display: block;
  background-color: rgba(232, 232, 202, 0.9) !important;
}

pre table {
  width: 100%;
  border-collapse: collapse;
}

img.article-block {
  width: 100%;
  border: black 2px solid;
  border-radius: 4px;
}

div.gradient {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100vh;
  margin: 0;
  padding: 0;
  background:
    linear-gradient(30deg, rgba(237, 136, 239, 0), rgba(237, 136, 239, 1)),
    linear-gradient(140deg, rgba(239, 136, 189, 0), rgba(239, 136, 189, 1)),
    linear-gradient(240deg, rgba(186, 136, 239, 0), rgba(186, 136, 239, 1));
  z-index: -200;
}

div.falcon {
  opacity: 0.2;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100%;
  z-index: -100;
}

div.footnote-definition {
  margin-top: 1em;

  &:nth-of-type(1) {
    border-top: 1px dashed;
    border-color: #222222;
    margin-top: 2em;
    padding-top: 2em;
  }

  p {
    display: inline;
    margin-left: 1em;
  }
}

ul.categories {
  list-style: none;
  padding: 0px;
  margin-top: 1em;
  margin-bottom: 0px;

  li {
    margin-right: 1em;
    padding: 4px;
    display: inline;
  }
}

